<resources>

    <string name="app_name">together</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_main">SAPERION Together</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="label_button_filter">Filter</string>
    <string name="hint_box_filter">Filter your Spaces</string>
    <string name="icon_edit">k</string>
    <string name="icon_download">j</string>
    <string name="icon_add_folder">a</string>
    <string name="icon_add_space">a</string>
    <string name="icon_add_document">b</string>
    <string name="icon_recycle">M</string>
    <string name="icon_cancel">n</string>
    <string name="icon_ok">q</string>
    <string name="icon_link">w</string>
    <string name="icon_comments">x</string>
    <string name="icon_arrow_up">3</string>
    <string name="icon_arrow_down">4</string>
    <string name="icon_search">m</string>
    <string name="hint_box_search">Search for Documents or Folders</string>
    <string name="label_button_search">Search</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_splash">Splash</string>

</resources>