<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_application"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <GridLayout
        android:id="@+id/layout_navigation"
        android:layout_width="299dp"
        android:layout_height="fill_parent"
        android:background="@color/background_grey"
        android:columnCount="4"
        android:rowCount="4" >

        <Space
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="0" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="4" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="2" />

        <Button
            android:id="@+id/button_add_space"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="left"
            android:text="@string/icon_add_space"
            android:textSize="25sp" />

        <AutoCompleteTextView
            android:id="@+id/box_filter"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/hint_box_filter"
            android:imeActionLabel="@string/hint_box_filter"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/saperion_orange" >

            <!-- requestFocus /-->
        </AutoCompleteTextView>

        <ListView
            android:id="@+id/view_space"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:layout_row="3"
            android:drawingCacheQuality="high"
            android:scrollingCache="true"
            android:fastScrollEnabled="true"
            android:animationCache="true"
            android:alwaysDrawnWithCache="true"
            android:clickable="true"
            android:choiceMode="singleChoice"
             /> <!-- android:layout_rowSpan="4" -->
    </GridLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="4"
        android:rowCount="4" >

        <Space
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="0" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="4" />

        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="2" />

        <Button
            android:id="@+id/button_add_folder"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/icon_add_folder"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_add_document"
            style="?android:attr/buttonStyleSmall"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/icon_add_document"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/box_search"
            android:layout_width="511dp"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/hint_box_search"
            android:imeActionLabel="@string/label_button_search"
            android:imeOptions="actionSearch"
            android:lines="1"
            android:selectAllOnFocus="true"
            android:textColor="@color/saperion_orange" >
        </EditText>

        <ListView
            android:id="@+id/view_content"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:layout_row="3"
            android:drawingCacheQuality="high"
            android:scrollingCache="true"
            android:fastScrollEnabled="true"
            android:animationCache="true"
            android:alwaysDrawnWithCache="true"  
            android:choiceMode="singleChoice"          
            tools:listitem="@id/content_item_layout" >
        </ListView>
    </GridLayout>

</LinearLayout>